# calendar

./: .gitignore  README.md  index.html  package-lock.json  package.json  styles.css  学习.shifted.ics
database/: DATABASE_OVERVIEW.md  OPERATIONS.md  README.md  SECRETARY_README.md  TOOLS.md  meta.json
database/data/: README.md
database/examples/: assistant-usage.md
database/migrations/: 0001_init.sql
llm-readmes/: secretary-calendar-readme.md
src/: app.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: lib.rs  main.rs
src/database/: query.js  store.js
src/secretary/: assistant.js
v4/Karin/: CURRENT_PRODUCT_STATE_SUMMARY.md  README.md  V6_PRODUCT_BASELINE.md
v4/Karin/docs/: CURRENT_UI_AND_INTERACTION_SUMMARY.md  UI_INTERACTION_ARCHITECTURE_REFACTOR_PLAN.md
v4/Karin/src/: styles.css
v4/Karin/src/legacy/: app.js
