# Chronicle Calendar desktop manifest.
# Defines the Rust crate, Tauri runtime dependencies, and SQLite plugin
# required for the v3 database layer to persist data locally on desktop.

[package]
name = "chronicle-calendar"
version = "0.2.0"
description = "Chronicle Calendar desktop shell"
authors = ["Codex"]
edition = "2021"

[lib]
name = "chronicle_calendar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.6", features = [] }
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
